test/corpus/angular.txt
================================================================================
Angular attribute
================================================================================

some-tag([attr]='hello')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))

================================================================================
Angular output
================================================================================

some-tag((attr)='hello')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))

================================================================================
Angular output string
================================================================================

some-tag((attr)='console.log("test")')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))

================================================================================
Angular banana box
================================================================================

some-tag([(attr)]='hello')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))

================================================================================
Angular directive
================================================================================

some-tag(*ngIf='enabled')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))

================================================================================
Angular templates
================================================================================

ng-template([ngTemplateOutlet]="tplTemplate", [ngTemplateOutletContext]="{$implicit: 'name'}")
some-tag(#tplTemplate, let-name)
  span {{name}}

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string))
      (attribute
        (attribute_name)
        (string))))
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name))
      (attribute
        (attribute_name)))
    (children
      (tag
        (tag_name)
        (javascript)))))

================================================================================
Angular attributes with dots in their names
================================================================================

some-tag([style.padding-right]='true')

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (string)))))
