test/corpus/include.txt
================================================================================
Basic include
================================================================================

include folder/file.pug

tag

--------------------------------------------------------------------------------

(source_file
  (include
    (keyword)
    (filename))
  (tag
    (tag_name)))

================================================================================
Include with filter
================================================================================

include:filter filename

tag

--------------------------------------------------------------------------------

(source_file
  (include
    (keyword)
    (filter
      (filter_name)
      (content)))
  (tag
    (tag_name)))
